# fastapi-mariadb

./: .env.sample  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue--good-first-issue.md
src/: main.py
src/core/: config.py
src/crud/: items.py  users.py
src/db/: database.py  models.py
src/router/: items_router.py  users_router.py
src/schema/: users_schema.py
